--- a/main.html
+++ b/main.html
@@ -1,23 +1,35 @@
-<!DOCTYPE html>
-
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Ordered List — Code Optimization</title>
+  <style>
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; padding: 24px; }
+    .container { max-width: 700px; margin: 0 auto; }
+    .tags { margin-top: 20px; }
+    .tag { display: inline-block; background:#eef; color:#112; padding:6px 10px; border-radius:999px; margin-right:8px; font-size:0.9rem; }
+  </style>
 </head>
-
 <body>
-	<p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
-	<ol>
-		<li>We can reduce the time taken to run the program and increase the space occupied</li>
-		<li>We can reduce the memory usage of the program and increase it's total run time</li>
-		<li>We can reduce both time and space complexity by deploying relevant algorithms
-</li>
-	</ol>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <h1>Code Optimization — Ordered List Example</h1>
 
+    <p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
+
+    <ol>
+      <li>We can reduce the time taken to run the program and increase the space occupied</li>
+      <li>We can reduce the memory usage of the program and increase it's total run time</li>
+      <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
+    </ol>
+
+    <div class="tags" aria-label="Topic Tags">
+      <strong>Topic Tags:</strong>
+      <span class="tag">code-optimization</span>
+      <span class="tag">time-complexity</span>
+      <span class="tag">space-complexity</span>
+      <span class="tag">algorithms</span>
+    </div>
+  </div>
 </body>
-
 </html>
