--- a/main.html
+++ b/main.html
@@ -1,28 +1,20 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ordered List — Code Optimization</title>
-  <style>
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; padding: 24px; }
-    .container { max-width: 700px; margin: 0 auto; }
-    .tags { margin-top: 20px; }
-    .tag { display: inline-block; background:#eef; color:#112; padding:6px 10px; border-radius:999px; margin-right:8px; font-size:0.9rem; }
-  </style>
+    <title>Code Optimization</title>
 </head>
 <body>
-  <div class="container">
-   
+    <h2>Code Optimization</h2>
 
-    <p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
+    <p>
+        We can optimize a solution using both time and space optimization. To optimize a program,
+    </p>
 
     <ol>
-      <li>We can reduce the time taken to run the program and increase the space occupied</li>
-      <li>We can reduce the memory usage of the program and increase it's total run time</li>
-      <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
+        <li>We can reduce the time taken to run the program and increase the space occupied</li>
+        <li>We can reduce the memory usage of the program and increase it's total run time</li>
+        <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
     </ol>
 
-   
 </body>
 </html>
